Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27408

DESC index on a Mroonga table causes wrong order of result set

Details

    Description

      install soname 'ha_mroonga';
      create or replace table t (a int, key(a desc)) engine=Mroonga;
      insert into t values (1),(3),(2);
      select * from t order by a;
      

      preview-10.8-MDEV-13756-desc-indexes 49b38c82a

      select * from t order by a;
      a
      3
      2
      1
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.