MDEV-27408 DESC index on a Mroonga table causes wrong order of result set

disallow descending indexes in mroonga